[package]
name = "one-word-story"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
censor = "0.3.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
serenity = { version = "0.11.5", features = ["client", "gateway", "rustls_backend", "model", "cache", "builder", "http", "utils"], default-features = false }
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
